--- a/minesweeper/src/styles/_settings.scss
+++ b/minesweeper/src/styles/_settings.scss
@@ -35,6 +35,7 @@
 
   &__apply,
   &__close {
+    cursor: pointer;
     display: inline-block;
     background-size: 4vmin;
     background-repeat: no-repeat;
